refactoring to use resource pattern

--- a/client/index.html
+++ b/client/index.html
@@ -124,6 +124,7 @@
     <script src="/client/app/data/repositories/repository.lookup.js"></script>
     <script src="/client/app/data/repositories/repository.session.js"></script>
     <script src="/client/app/data/repositories/repository.speaker.js"></script>
+    <script src="/client/app/data/resources/resource.user.js"></script>
     <!-- endinject -->
 
     <!-- inject:templates:js -->
