--- a/client/index.html
+++ b/client/index.html
@@ -71,47 +71,33 @@
     <!-- build:js /js/app.js -->
     <!-- inject:js -->
     <script src="/client/app/app.module.js"></script>
-    <script src="/client/app/attendee/attendees.module.js"></script>
     <script src="/client/app/core/core.module.js"></script>
     <script src="/client/app/data/data.module.js"></script>
-    <script src="/client/app/main/main.module.js"></script>
     <script src="/client/app/map/map.module.js"></script>
+    <script src="/client/app/main/main.module.js"></script>
     <script src="/client/app/place/place.module.js"></script>
-    <script src="/client/app/session/session.module.js"></script>
     <script src="/client/app/user/user.module.js"></script>
     <script src="/client/app/admin/user/admin.user.module.js"></script>
     <script src="/client/app/blocks/exception/exception.module.js"></script>
     <script src="/client/app/blocks/logger/logger.module.js"></script>
     <script src="/client/app/blocks/router/router.module.js"></script>
-    <script src="/client/app/attendee/attendees.js"></script>
-    <script src="/client/app/attendee/attendees.route.js"></script>
     <script src="/client/app/core/bootstrap.dialog.js"></script>
     <script src="/client/app/core/common.js"></script>
     <script src="/client/app/core/config.breeze.js"></script>
     <script src="/client/app/core/core.config.js"></script>
     <script src="/client/app/core/core.constants.js"></script>
     <script src="/client/app/data/datacontext.js"></script>
-    <script src="/client/app/data/entityManagerFactory.js"></script>
-    <script src="/client/app/data/model.js"></script>
-    <script src="/client/app/data/model.metadata.js"></script>
-    <script src="/client/app/data/model.validation.js"></script>
+    <script src="/client/app/map/map.js"></script>
     <script src="/client/app/main/main.controller.js"></script>
     <script src="/client/app/main/main.route.js"></script>
-    <script src="/client/app/map/map.js"></script>
     <script src="/client/app/place/place.detail.controller.js"></script>
     <script src="/client/app/place/place.list.controller.js"></script>
-    <script src="/client/app/place/place.resource.cache.js"></script>
-    <script src="/client/app/place/place.resource.js"></script>
     <script src="/client/app/place/place.route.js"></script>
-    <script src="/client/app/session/session.route.js"></script>
-    <script src="/client/app/session/sessiondetail.js"></script>
-    <script src="/client/app/session/sessions.js"></script>
     <script src="/client/app/user/identity.factory.js"></script>
     <script src="/client/app/user/login.controller.js"></script>
     <script src="/client/app/user/profile.controller.js"></script>
     <script src="/client/app/user/signup.controller.js"></script>
     <script src="/client/app/user/user.factory.js"></script>
-    <script src="/client/app/user/user.resource.js"></script>
     <script src="/client/app/user/user.route.js"></script>
     <script src="/client/app/admin/user/admin.user.controller.js"></script>
     <script src="/client/app/admin/user/admin.user.route.js"></script>
@@ -119,11 +105,8 @@
     <script src="/client/app/blocks/exception/exception.handler.provider.js"></script>
     <script src="/client/app/blocks/logger/logger.factory.js"></script>
     <script src="/client/app/blocks/router/router.factory.js"></script>
-    <script src="/client/app/data/repositories/repository.abstract.js"></script>
-    <script src="/client/app/data/repositories/repository.attendee.js"></script>
-    <script src="/client/app/data/repositories/repository.lookup.js"></script>
-    <script src="/client/app/data/repositories/repository.session.js"></script>
-    <script src="/client/app/data/repositories/repository.speaker.js"></script>
+    <script src="/client/app/data/resources/resource.place.cache.js"></script>
+    <script src="/client/app/data/resources/resource.place.js"></script>
     <script src="/client/app/data/resources/resource.user.js"></script>
     <!-- endinject -->
 
