--- a/client/app/user/form-login.html
+++ b/client/app/user/form-login.html
@@ -13,6 +13,7 @@
     <li class="dropdown"> <a href="" data-toggle="dropdown" class="dropdown-toggle">{{ vm.identity.currentUser.firstName + " " + vm.identity.currentUser.lastName }}<b class="caret"></b></a>
       <ul class="dropdown-menu">
         <li ng-show="vm.identity.currentUser.isAdmin()"><a href="/admin/users">User Admin</a></li>
+        <li><a href="/places_add">Add New Place</a></li>
         <li><a href="/profile">Profile</a></li>
         <li><a href="" ng-click="vm.signout()">Sign Out</a></li>
       </ul>
