--- a/client/index.html
+++ b/client/index.html
@@ -71,8 +71,8 @@
     <!-- build:js /js/app.js -->
     <!-- inject:js -->
     <script src="/client/app/app.module.js"></script>
-    <script src="/client/app/data/data.module.js"></script>
     <script src="/client/app/core/core.module.js"></script>
+    <script src="/client/app/data/data.module.js"></script>
     <script src="/client/app/main/main.module.js"></script>
     <script src="/client/app/map/map.module.js"></script>
     <script src="/client/app/place/place.module.js"></script>
@@ -81,16 +81,18 @@
     <script src="/client/app/blocks/exception/exception.module.js"></script>
     <script src="/client/app/blocks/logger/logger.module.js"></script>
     <script src="/client/app/blocks/router/router.module.js"></script>
-    <script src="/client/app/data/datacontext.js"></script>
     <script src="/client/app/core/bootstrap.dialog.js"></script>
     <script src="/client/app/core/common.js"></script>
     <script src="/client/app/core/config.breeze.js"></script>
     <script src="/client/app/core/core.config.js"></script>
     <script src="/client/app/core/core.constants.js"></script>
+    <script src="/client/app/data/datacontext.js"></script>
     <script src="/client/app/main/main.controller.js"></script>
     <script src="/client/app/main/main.route.js"></script>
     <script src="/client/app/map/map.js"></script>
+    <script src="/client/app/place/place.add.controller.js"></script>
     <script src="/client/app/place/place.detail.controller.js"></script>
+    <script src="/client/app/place/place.factory.js"></script>
     <script src="/client/app/place/place.list.controller.js"></script>
     <script src="/client/app/place/place.route.js"></script>
     <script src="/client/app/user/identity.factory.js"></script>
