SQ-9 add draggable map marker

--- a/client/index.html
+++ b/client/index.html
@@ -89,6 +89,7 @@
     <script src="/client/app/data/datacontext.js"></script>
     <script src="/client/app/main/main.controller.js"></script>
     <script src="/client/app/main/main.route.js"></script>
+    <script src="/client/app/map/map-marker.controller.js"></script>
     <script src="/client/app/map/map.js"></script>
     <script src="/client/app/place/place.add.controller.js"></script>
     <script src="/client/app/place/place.detail.controller.js"></script>
