--- a/client/app/place/place-add.html
+++ b/client/app/place/place-add.html
@@ -2,23 +2,40 @@
 <div class="container">
   <div class="well">
     <form name="addPlaceForm" class="form-horizontal">
-      <fieldset>
-        <legend>Add New Place
-          <div class="form-group">
-            <label for="title" class="col-md-2 control-label">Title</label>
-            <div class="col-md-10">
-              <input name="title" type="title" placeholder="Title" ng-model="title" required="required" class="form-control"/>
-            </div>
-          </div>
-          <div class="form-group">
-            <div class="col-md-10 col-md-offset-2">
-              <div class="pull-right">
-                <button ng-click="addNew()" ng-disable="addPlaceForm.invalid" class="btn btn-primary">Submit</button><a href="/" class="btn btn-default">Cancel</a>
-              </div>
-            </div>
-          </div>
-        </legend>
-      </fieldset>
+            <fieldset>
+            <legend>Add New Place
+                <div id="map_canvas" class="form-group" data-ng-controller="MapMarker as vm">
+                    <ui-gmap-google-map center="map.center" zoom="map.zoom" draggable="true" options="options" events="map.events">
+                        <ui-gmap-marker ng-repeat="m in map.markers" coords="m.coords" options="m.options" events="m.events" idkey="m.id">
+                        </ui-gmap-marker>
+                    </ui-gmap-google-map>
+                    <br />
+                    <label for="coordinate" class="col-md-2 control-label">Coordinate</label>
+                    <div class="col-md-3">
+                        <input name="latitude" type="text" placeholder="Latitude" ng-model="map.markers[0].coords.latitude" required="required" class="form-control"/>
+                    </div>
+                    <div class="col-md-3">
+                        <input name="longitude" type="text" placeholder="Longitude" ng-model="map.markers[0].coords.longitude" required="required" class="form-control"/>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label for="title" class="col-md-2 control-label">Title</label>
+                    <div class="col-md-10">
+                        <input name="title" type="text" placeholder="Title" ng-model="title" required="required" class="form-control"/>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <div class="col-md-10 col-md-offset-2">
+                        <div class="pull-right">
+                            <button ng-click="addNew()" ng-disable="addPlaceForm.invalid" class="btn btn-primary">
+                            Submit
+                            </button>
+                            <a href="/" class="btn btn-default">Cancel</a>
+                        </div>
+                    </div>
+                </div>
+            </legend>
+        </fieldset>
     </form>
   </div>
 </div>
