--- a/client/index.html
+++ b/client/index.html
@@ -67,6 +67,7 @@
     <script src="/bower_components/lodash/lodash.js"></script>
     <script src="/bower_components/angular-google-maps/dist/angular-google-maps.js"></script>
     <script src="/bower_components/angular-ivh-treeview/dist/ivh-treeview.js"></script>
+    <script src="/bower_components/ng-file-upload/ng-file-upload.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
