SQ-11 implement new file upload components

--- a/client/index.html
+++ b/client/index.html
@@ -68,6 +68,7 @@
     <script src="/bower_components/angular-google-maps/dist/angular-google-maps.js"></script>
     <script src="/bower_components/angular-ivh-treeview/dist/ivh-treeview.js"></script>
     <script src="/bower_components/ng-file-upload/ng-file-upload.js"></script>
+    <script src="/bower_components/angular-file-upload/dist/angular-file-upload.min.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
@@ -100,6 +101,7 @@
     <script src="/client/app/place/place.factory.js"></script>
     <script src="/client/app/place/place.list.controller.js"></script>
     <script src="/client/app/place/place.route.js"></script>
+    <script src="/client/app/place/thumb.directive.js"></script>
     <script src="/client/app/user/identity.factory.js"></script>
     <script src="/client/app/user/login.controller.js"></script>
     <script src="/client/app/user/profile.controller.js"></script>
