--- a/client/app/place/place-add.html
+++ b/client/app/place/place-add.html
@@ -47,29 +47,109 @@
                 </div>
                 <div class="col-md-5 col-md-offset-1">
                     <div class="form-group">
-                        <label for="title">Categories</label>
                         <div ng-if="categoryCounter > 5" class="alert alert-danger">
-                            <strong>Category counter {{categoryCounter}}.</strong>
+                            <strong>Number of category allowed: {{categoryCounter}} / 5.</strong>
                         </div>
                         <div ng-if="categoryCounter <= 5" class="alert alert-success">
-                            <strong>Category counter {{categoryCounter}}.</strong>
+                            <strong>Number of category allowed: {{categoryCounter}} / 5.</strong>
                         </div>
                         <div ivh-treeview="categories" ivh-treeview-default-selected-state="false" ivh-treeview-expand-to-depth="1" ivh-treeview-twistie-expanded-tpl="'v'" ivh-treeview-twistie-collapsed-tpl="'>'" ivh-treeview-twistie-leaf-tpl="'-'" ivh-treeview-on-cb-change="changeCallback(ivhNode, ivhIsSelected, ivhTree)">
                         </div>
                     </div>
-                    <div class="form-group">
+                    <div class="form-group" nv-file-drop="" uploader="uploader">
+                        <div class="row">
+                            <div ng-show="uploader.isHTML5">
+                                <div class="well my-drop-zone" nv-file-over="" uploader="uploader">
+                                    Drop images here
+                                </div>
+                            </div>
+                            <br/>
+                        </div>
+                        <div class="row" ng-if="uploader.queue.length > 0">
+                            <!-- <p>Queue length: {{ uploader.queue.length }}</p> -->
+                            <div class="row">
+                                <table class="table">
+                                    <thead>
+                                        <tr>
+                                            <th width="50%">Name</th>
+                                            <th ng-show="uploader.isHTML5">Size</th>
+                                            <th ng-show="uploader.isHTML5">Progress</th>
+                                            <th>Status</th>
+                                            <th>Actions</th>
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+                                        <tr ng-repeat="item in uploader.queue">
+                                            <td>
+                                                <strong>{{ item.file.name }}</strong>
+                                                <!-- Image preview -->
+                                                <!--auto height-->
+                                                <!--<div ng-thumb="{ file: item.file, width: 100 }"></div>-->
+                                                <!--auto width-->
+                                                <div ng-show="uploader.isHTML5" ng-thumb="{ file: item._file, height: 100 }"></div>
+                                                <!--fixed width and height -->
+                                                <!--<div ng-thumb="{ file: item.file, width: 100, height: 100 }"></div>-->
+                                            </td>
+                                            <td ng-show="uploader.isHTML5" nowrap>{{ item.file.size/1024/1024|number:2 }} MB</td>
+                                            <td ng-show="uploader.isHTML5">
+                                                <div class="progress" style="margin-bottom: 0;">
+                                                    <div class="progress-bar" role="progressbar" ng-style="{ 'width': item.progress + '%' }"></div>
+                                                </div>
+                                            </td>
+                                            <td class="text-center">
+                                                <span ng-show="item.isSuccess"><i class="glyphicon glyphicon-ok"></i></span>
+                                                <span ng-show="item.isCancel"><i class="glyphicon glyphicon-ban-circle"></i></span>
+                                                <span ng-show="item.isError"><i class="glyphicon glyphicon-remove"></i></span>
+                                            </td>
+                                            <td nowrap>
+                                                <button type="button" class="btn btn-success btn-xs" ng-click="item.upload()" ng-disabled="item.isReady || item.isUploading || item.isSuccess">
+                                                    <span class="glyphicon glyphicon-upload"></span> Upload
+                                                </button>
+                                                <button type="button" class="btn btn-warning btn-xs" ng-click="item.cancel()" ng-disabled="!item.isUploading">
+                                                    <span class="glyphicon glyphicon-ban-circle"></span> Cancel
+                                                </button>
+                                                <button type="button" class="btn btn-danger btn-xs" ng-click="item.remove()">
+                                                    <span class="glyphicon glyphicon-trash"></span> Remove
+                                                </button>
+                                            </td>
+                                        </tr>
+                                    </tbody>
+                                </table>
+                            </div>
+                            <div class="row">
+                                <div>
+                                    Queue progress:
+                                    <div class="progress" style="">
+                                        <div class="progress-bar" role="progressbar" ng-style="{ 'width': uploader.progress + '%' }"></div>
+                                    </div>
+                                </div>
+                                <button type="button" class="btn btn-success btn-s" ng-click="uploader.uploadAll()" ng-disabled="!uploader.getNotUploadedItems().length">
+                                    <span class="glyphicon glyphicon-upload"></span> Upload all
+                                </button>
+                                <button type="button" class="btn btn-warning btn-s" ng-click="uploader.cancelAll()" ng-disabled="!uploader.isUploading">
+                                    <span class="glyphicon glyphicon-ban-circle"></span> Cancel all
+                                </button>
+                                <button type="button" class="btn btn-danger btn-s" ng-click="uploader.clearQueue()" ng-disabled="!uploader.queue.length">
+                                    <span class="glyphicon glyphicon-trash"></span> Remove all
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+                    <!--                     <div class="form-group">
                         <label for="upload">Drop files</label>
-                        <div ngf-drop ngf-select ng-model="files" class="drop-box" ngf-drag-over-class="'dragover'" ngf-multiple="true" ngf-allow-dir="true" accept="image/*,application/pdf" ngf-pattern="'image/*,application/pdf'">Drop pdfs or images here or click to upload</div>
+                        <div ngf-drop ngf-select ng-model="files" class="drop-box" ngf-drag-over-class="'dragover'" ngf-multiple="true" ngf-allow-dir="true" accept="image/*" ngf-pattern="'image/*'">Drop images here or click to upload</div>
                         <div ngf-no-file-drop>File Drag/Drop is not supported for this browser</div>
-                        Files:
-                        <ul>
-                            <li ng-repeat="f in files" style="font:smaller">
-                                {{f.name}} {{f.$error}} {{f.$errorParam}}
-                            </li>
-                        </ul>
+                        <div ng-if="files">
+                            Files:
+                            <ul>
+                                <li ng-repeat="f in files" style="font:smaller">
+                                    {{f.name}} {{f.$error}} {{f.$errorParam}}
+                                </li>
+                            </ul>
+                        </div>
                         Upload Log:
                         <pre>{{log}}</pre>
-                    </div>
+                    </div> -->
                 </div>
             </div>
             <div class="row">
