--- a/client/app/map/map.html
+++ b/client/app/map/map.html
@@ -3,7 +3,7 @@
         <div class="widget">
             <div class="widget-content">
                 <div class="map">
-                    <ui-gmap-google-map center='map.center' zoom='map.zoom'></ui-gmap-google-map>
+                    <ui-gmap-google-map center='map.center' zoom='map.zoom' options="map.options"></ui-gmap-google-map>
                 </div>
             </div>
             <div class="widget-foot">
