--- a/client/app/place/place-add.html
+++ b/client/app/place/place-add.html
@@ -4,7 +4,7 @@
             <h2>Add New Place</h2>
             <div class="row">
                 <div id="map_canvas" class="form-group">
-                    <ui-gmap-google-map center="map.center" zoom="map.zoom" draggable="true" options="options" events="map.events">
+                    <ui-gmap-google-map center="map.center" zoom="map.zoom" options="map.options" events="map.events" draggable="true">
                         <ui-gmap-marker ng-repeat="m in map.markers" coords="m.coords" options="m.options" events="m.events" idkey="m.id">
                         </ui-gmap-marker>
                     </ui-gmap-google-map>
