--- a/client/app/place/place-add.html
+++ b/client/app/place/place-add.html
@@ -47,6 +47,43 @@
                 </div>
                 <div class="col-md-5 col-md-offset-1">
                     <div class="form-group">
+                        Country:
+                        <select id="country" ng-model="states" ng-options="country for (country, states) in countries" ng-change="getSelectedCountry()">
+                            <option value=''>Select</option>
+                        </select>
+                        States:
+                        <select id="state" ng-disabled="!states" ng-model="cities" ng-options="state for (state,cities) in states" ng-change="getSelectedState()">
+                            <option value=''>Select</option>
+                        </select>
+                        City:
+                        <select id="city" ng-disabled="!cities || !states" ng-model="city">
+                            <option value=''>
+                                Select</option>
+                            <option ng-repeat="city in cities" value='{{city}}'>{{city}}</option>
+                        </select>
+                        <div style='height: 15px;'>
+                            &nbsp;</div>
+                        <div>
+                            <span>Selected Country: </span>
+                            <label>
+                                {{strCountry}}</label>
+                        </div>
+                        <div style='height: 15px;'>
+                            &nbsp;</div>
+                        <div>
+                            <span>Selected State: </span>
+                            <label>
+                                {{strState}}</label>
+                        </div>
+                        <div style='height: 15px;'>
+                            &nbsp;</div>
+                        <div>
+                            <span>Selected City: </span>
+                            <label>
+                                {{city}}</label>
+                        </div>
+                    </div>
+                    <div class="form-group">
                         <div ng-if="categoryCounter > 5" class="alert alert-danger">
                             <strong>Number of category allowed: {{categoryCounter}} / 5.</strong>
                         </div>
