SQ-12 working on location services

--- a/client/index.html
+++ b/client/index.html
@@ -75,8 +75,8 @@
     <!-- build:js /js/app.js -->
     <!-- inject:js -->
     <script src="/client/app/app.module.js"></script>
-    <script src="/client/app/core/core.module.js"></script>
     <script src="/client/app/data/data.module.js"></script>
+    <script src="/client/app/core/core.module.js"></script>
     <script src="/client/app/main/main.module.js"></script>
     <script src="/client/app/map/map.module.js"></script>
     <script src="/client/app/place/place.module.js"></script>
@@ -85,12 +85,12 @@
     <script src="/client/app/blocks/logger/logger.module.js"></script>
     <script src="/client/app/blocks/exception/exception.module.js"></script>
     <script src="/client/app/blocks/router/router.module.js"></script>
+    <script src="/client/app/data/datacontext.js"></script>
     <script src="/client/app/core/bootstrap.dialog.js"></script>
     <script src="/client/app/core/common.js"></script>
     <script src="/client/app/core/config.breeze.js"></script>
     <script src="/client/app/core/core.config.js"></script>
     <script src="/client/app/core/core.constants.js"></script>
-    <script src="/client/app/data/datacontext.js"></script>
     <script src="/client/app/main/main.controller.js"></script>
     <script src="/client/app/main/main.route.js"></script>
     <script src="/client/app/map/map-marker.controller.js"></script>
@@ -116,6 +116,8 @@
     <script src="/client/app/blocks/router/router.factory.js"></script>
     <script src="/client/app/data/resources/resource.category.cache.js"></script>
     <script src="/client/app/data/resources/resource.category.js"></script>
+    <script src="/client/app/data/resources/resource.location.cache.js"></script>
+    <script src="/client/app/data/resources/resource.location.js"></script>
     <script src="/client/app/data/resources/resource.place.cache.js"></script>
     <script src="/client/app/data/resources/resource.place.js"></script>
     <script src="/client/app/data/resources/resource.user.js"></script>
