--- a/client/app/place/place-add.html
+++ b/client/app/place/place-add.html
@@ -48,15 +48,15 @@
                 <div class="col-md-5 col-md-offset-1">
                     <div class="form-group">
                         Country:
-                        <select id="country" ng-model="country" ng-options="item.name for item in countries" ng-change="getStates(country)">
+                        <select id="country" ng-model="country" ng-options="item.name for item in countries" ng-change="getStates(country)" ng-focus="countries">
                             <option value=''>Select</option>
                         </select>
 
-                        <select id="state" ng-disabled="!country" ng-model="state" ng-options="item.name for item in states" ng-change="getCities(state)">
+                        <select id="state" ng-disabled="!country" ng-model="state" ng-options="item.name for item in states" ng-change="getCities(state)" ng-focus="!country">
                             <option value=''>Select</option>
                         </select>
 
-                        <select id="city" ng-disabled="!state" ng-model="city" ng-options="item.name for item in cities">
+                        <select id="city" ng-disabled="!state" ng-model="city" ng-options="item.name for item in cities" ng-focus="!state">
                             <option value=''>Select</option>
                         </select>
 
