--- a/client/app/place/place-add.html
+++ b/client/app/place/place-add.html
@@ -59,43 +59,18 @@
                         <select id="city" ng-disabled="!state" ng-model="city" ng-options="item.name for item in cities" ng-focus="!state">
                             <option value=''>Select</option>
                         </select>
-
-                        <!-- <select id="country" ng-model="country" ng-options="item.country for item in countries" ng-change="getSelectedCountry(country)">
-                            <option value=''>Select</option>
-                        </select> -->
-                         <!-- <select id="state" ng-disabled="!country" ng-model="states" ng-options="item.state for item in country.states" ng-change="getSelectedState(states)">
-                            <option value=''>Select</option>
-                        </select>
-
-                        City:
-                        <select id="city" ng-disabled="!states || !country" ng-model="city">
-                            <option value=''>
-                                Select</option>
-                            <option ng-repeat="city in states.city" value='{{city}}'>{{city}}</option>
-                        </select>  -->
-                        
-                        <!-- <div style='height: 15px;'>
-                            &nbsp;</div>
                         <div>
                             <span>Selected Country: </span>
-                            <label>
-                                {{strCountry}}</label>
+                            <label>{{country}}</label>
                         </div>
-                        <div style='height: 15px;'>
-                            &nbsp;</div>
                         <div>
                             <span>Selected State: </span>
-                            <label>
-                                {{strState}}</label>
+                            <label>{{state}}</label>
                         </div>
-                        <div style='height: 15px;'>
-                            &nbsp;</div>
-                             
                         <div>
                             <span>Selected City: </span>
-                            <label>
-                                {{city}}</label>
-                        </div> -->
+                            <label>{{city}}</label>
+                        </div>
                     </div>
                     <div class="form-group">
                         <div ng-if="categoryCounter > 5" class="alert alert-danger">
