--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -1,5 +1,5 @@
 <!-- Main jumbotron for a primary marketing message or call to action -->
-<div class="jumbotron">
+<div>
     <div data-ng-include="'/app/map/map.html'"></div>
 </div>
 <div class="container">
