SQ-16 #in-progess implementing inspinia templates

--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -1,7 +1,7 @@
-<!-- Main jumbotron for a primary marketing message or call to action -->
-<div>
+<div class="container-fluid map">
     <div data-ng-include="'/app/map/map.html'"></div>
 </div>
+
 <div class="container">
     <div class="row">
         <div class="col-md-12">
