--- a/client/index.html
+++ b/client/index.html
@@ -36,7 +36,7 @@
             </div>
         </div>
     </div>
-    <section class="content">
+    <section class="content white-bg">
         <div ng-view></div>
     </section>
     <footer class="container text-center">
