apply slick carousel in the main page

--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -2,12 +2,15 @@
     <div data-ng-include="'/app/map/map.html'"></div>
 </div>
 
+<!-- Additional style only for demo purpose -->
+<style>
+    .slick_demo_2 .ibox-content {
+        margin: 0 10px;
+    }
+</style>
+
 <div class="container">
-    <div class="row">
-        <div class="col-md-12">
-            <div data-ng-include="'/app/main/panel-featured-place.html'"></div>
-        </div>
-    </div>
+    <div data-ng-include="'/app/main/panel-featured-place.html'"></div>
     <div class="row">
         <div class="col-md-12">
             <div data-ng-include="'/app/main/panel-new-place.html'"></div>
