--- a/client/app/main/panel-featured-place.html
+++ b/client/app/main/panel-featured-place.html
@@ -1,11 +1,18 @@
 <div class="wrapper wrapper-content">
     <div class="row">
         <div class="col-lg-12">
-            <h4 class="text-center m">
-                FEATURED LISTINGS
-            </h4>
-
-            <slick class="slick_demo_2" infinite="true" slides-to-show="3" slides-to-scroll="1" center-mode="false" autoplay="true" autoplaySpeed="5000" speed="5000" dots="true"
+            <div class="ibox float-e-margins">
+                <div class="ibox-content text-center p-md">
+                    <h2>
+                        <span class="text-navy">FEATURED LISTING</span>
+                    </h2>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-lg-12">
+            <slick class="slick_demo_2" infinite="true" slides-to-show="3" slides-to-scroll="1" center-mode="false" autoplay="true" autoplaySpeed="5000" speed="5000" dots="false"
                    responsive="[{ breakpoint: 1024, settings: { slidesToShow: 3, slidesToScroll: 3, infinite: true, dots: true } }, { breakpoint: 600, settings: { slidesToShow: 2, slidesToScroll: 2 } }, { breakpoint: 480, settings: { slidesToShow: 1, slidesToScroll: 1 } } ]" >
                 <div ng-repeat="place in vm.places | filter:{featured:true}" >
                     <div class="ibox-content">
